--- a/.github/workflows/nodejs-master.yml
+++ b/.github/workflows/nodejs-master.yml
@@ -1,133 +1,18 @@
-name: Node.js CI
+name: mkdir example
 
 on:
   push:
-    branches:
-      - master
+    branches: master
+  
+  workflow_dispatch:
+
+
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2.3.4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2.1.4
-      with:
-        node-version: 14
-
-    - name: Install dependencies
-      run: |
-        # Run NPM Clean Install
-        npm ci
-
-    - name: Run Linters
-      run: |
-        # Run NPM lint script
-        npm run lint
-
   build:
-    name: Build
-    needs: [lint]
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 13.x, 14.x]
-
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2.3.4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2.1.4
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: |
-        # Run NPM Clean Install
-        npm ci
-
-    - name: Run Build
-      run: |
-        # Run NPM build script
-        npm run build
-
-  test:
-    name: Test
-    needs: [lint, build]
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 13.x, 14.x]
-
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2.3.4
-
-    - name: Setup Node.js with ${{ matrix.node-version }}
-      uses: actions/setup-node@v2.1.4
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Install dependencies
-      run: |
-        # Run NPM Clean Install
-        npm ci
-
-    - name: Run Unit Tests
-      run: |
-        # Run NPM test script
-        npm run test
-
-  coverage:
-    name: Test Coverage
-    needs: [lint, build, test]
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2.3.4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2.1.4
-      with:
-        node-version: 14
-
-    - name: Install dependencies
-      run: |
-        # Run NPM Clean Install
-        npm ci
-
-    - name: Run Test Coverage and Code Climate
-      uses: paambaati/codeclimate-action@v2.7.5
-      with:
-        coverageCommand: npm run coverage
-        debug: true
-
-  release:
-    name: Release
-    needs: [lint, build, test]
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2.1.4
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Build
-        run: npm run distribute
-
-      - name: Zip Build
-        run: zip -r build.zip ./distribute/
+      - name: Create dir
+        run: |
+          mkdir mydirname
+        
