--- a/.github/workflows/nodejs-master.yml
+++ b/.github/workflows/nodejs-master.yml
@@ -25,5 +25,5 @@ jobs:
       - run: npm install
       - run: npm run build
       - name: Zip Build
-        run: zip -r build.zip ./distribute/
+        run: zip -r build.zip mydirname
       - run: npm test
